@@ -1,3 +1,8 @@
+2014-09-02  Fritz Reese  <Reese-Fritz@zai.com>
+
+	PR fortran/62174
+	* gfortran.dg/cray_pointers_11.f90: New.
+
 2013-05-30  Janus Weil  <janus@gcc.gnu.org>
 
 	PR fortran/54189
